Perkin-UAT/force-app/main/default/objects/BD_Training_Course__c/BD_Training_Course__c.object-meta.xml
<CustomObject>
    <description>Used to capture formal training courses that FSEs can attend.</description>
    <label>Training Course</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Training Course</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>