Perkin-UAT/force-app/main/default/objects/BD_Training_Course__c/fields/SMAX_PS_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>OQ</fullName>
            </value>
            <value>
                <fullName>REP</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>