Perkin-UAT/force-app/main/default/objects/BD_Training_Course__c/fields/SMAX_PS_Course_Title__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Course_Title__c</fullName>
    <description>Course Title from LMS system.</description>
    <label>Course Title</label>
    <type>TextArea</type>
</CustomField>