Perkin-UAT/force-app/main/default/objects/BD_Training_Course__c/fields/SMAX_PS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>