Perkin-UAT/force-app/main/default/objects/BD_Training_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Course_Title__c</columns>
    <columns>SMAX_PS_Activity_Type__c</columns>
    <columns>SMAX_PS_Course_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>